# oquat

./: .bumpversion.cfg  .cruft.json  .gitignore  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: tests.yml  update.yml
docs/: README.md  failures.md  unknowns.md
docs/invalids/: README.md  index.md
docs/invalids/prefix/: aao.md  aeo.md  agricola.md  apo.md  asin.md  atc.md  atcc.md  bcgo.md  bcrc.md  bfo.md  biocyc.md  biogrid.md  biorxiv.md  birnlex.md  brenda.md  bs.md  bspo.md  bto.md  caloha.md  caro.md  cas.md  cba.md  cellosaurus.md  cgd.md  chebi.md  chembl.md  chemidplus.md  cl.md  cldb.md  clinvar.md  clo.md  cnrs.md  cog.md  coriell.md  dhba.md  disprot.md  doi.md  (+191 more)
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
docs/unknowns/: README.md  index.md  prefix.md
docs/versions/: README.md
results/: adcad.json  ado.json  adw.json  aeo.json  aeon.json  aero.json  afpo.json  agro.json  aio.json  aism.json  amphx.json  apaonto.json  apo.json  apollosv.json  aro.json  ato.json  atol.json  bao.json  bcgo.json  bcio.json  bco.json  bfo.json  bila.json  biolink.json  biomodels.json  biotop.json  birnlex.json  bko.json  bs.json  bspo.json  bto.json  caloha.json  cao.json  caro.json  ccf.json  cdao.json  cdno.json  cdt.json  cemo.json  ceph.json  (+360 more)
src/oquat/: __init__.py  __main__.py  analyze_invalids.py  analyze_unknowns.py  analyze_versions.py  api.py  cli.py  go_analysis.py  large_scale_analysis.py  robot.py  version.py
tests/: __init__.py  test_api.py  test_version.py
(+1660 files in other folders)
